@@ -1,5 +1,6 @@
 0.13.1
  - fix: handle not-found-errors for non-existent resource downloads
+ - ref: replace setuptools pkg_resources with importlib.resources
 0.13.0
  - setup: drop support for Python 3.9
  - ci: migrate from appveyor to GitHub Actions
